--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,12 +37,15 @@
       <section app-what-do-we-do view='page-2'></section>
     </ng-template>
   </ng-container>
-  <ng-container *ngIf="!isMobile">
+  <ng-template swiperSlide>
+    <section app-influencers></section>
+  </ng-template>
+  <ng-container *ngIf="!isMobile && !isTablet">
     <ng-template swiperSlide>
       <footer app-footer></footer>
     </ng-template>
   </ng-container>
-  <ng-container *ngIf="isMobile">
+  <ng-container *ngIf="isMobile || isTablet">
     <ng-template swiperSlide>
       <footer app-footer view='page-1'></footer>
     </ng-template>
