feat(home): criando modulo de influecers

--- a/src/app/pages/home/components/curiosity/curiosity.component.html
+++ b/src/app/pages/home/components/curiosity/curiosity.component.html
@@ -1,5 +1,21 @@
 <div class="curiosity-container">
     <div class="bg">
+        <div class="title-section">
+            <span class='title-one'>
+                <h2 class="title-one-text">CURIOSIDADE
+                    <span class="images-group">
+                        <img src="/assets/images/icons/tres-linhas-pretas.png" class="title-image" alt="tres linhas pretas">
+                        <img src="/assets/images/icons/tres-linhas-amarelas.png" class="title-image"
+                            alt="tres linhas amarelas">
+                    </span>
+                </h2>
+                
+            </span>
+            <span class="subtitle-box">a oração do publicitário</span>
+            <p class="text-box">Pai nosso que estais no céu, <br>Santificado seja o vosso cliente. <br>Venha a nós a vossa agência, <br>E seja feito o vosso briefing. <br>Assim no brainstorm como no insight. <br>A criação nossa de cada dia nos dai hoje. Perdoai as nossas más idéias, <br>Assim como nós perdoamos o anúncio que não tenha vendido, <br>e não nos deixe cair em má comunicação, mas livrai-nos do Conar!</p>
+            <span class="final-text">AmEm!</span>
+            <span class="futura-book-bt mt-4">*Autor desconhecido</span>
+        </div>
         <img src="/assets/images/cloud-md.png" class="nuvems nuvem-md" alt="nuvem nuvem-md">
     </div>
 </div>
