--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -40,6 +40,9 @@
   <ng-template swiperSlide>
     <section app-influencers></section>
   </ng-template>
+  <ng-template swiperSlide>
+    <section app-curiosity></section>
+  </ng-template>
   <ng-container *ngIf="!isMobile && !isTablet">
     <ng-template swiperSlide>
       <footer app-footer></footer>
