--- a/src/app/pages/home/components/influencers/influencers.component.scss
+++ b/src/app/pages/home/components/influencers/influencers.component.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   position: relative;
   overflow: hidden;
-  padding: 1rem;
+  padding: 1rem 1rem 2rem;
   gap: 1rem;
   height: 100%;
   justify-content: space-between;
