--- a/src/app/pages/home/components/who-are-we/who-are-we.component.scss
+++ b/src/app/pages/home/components/who-are-we/who-are-we.component.scss
@@ -2,10 +2,14 @@
 
 :host {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  height: calc(100vh - 80px);
+
+  @media (min-width: $lg) {
+    height: calc(100vh - 120px);
+  }
 }
 
 .container-who-are-we {
@@ -15,8 +19,12 @@
   position: relative;
   overflow: hidden;
   padding: 1rem;
-  height: 100vh;
   gap: 2rem;
+  height: calc(100vh - 80px);
+
+  @media (min-width: $lg) {
+    height: calc(100vh - 120px);
+  }
 
   @media (min-width: $md) {
     gap: 1rem;
@@ -223,7 +231,7 @@
 .footer-content {
   background-color: $primaryBlueColor;
   position: absolute;
-  bottom: 0;
+  bottom: 80px;
   width: 100%;
   padding: 1rem 0;
   border-top: 1px solid white;
