--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,13 +3,15 @@
 :host {
   background-color: $primaryBlueColor;
   padding: 1rem 0 1rem;
-  height: 100vh;
   width: 100vw;
+  height: calc(100vh - 80px);
+
   @media (min-width: $md) {
     padding: 37px 0 72px;
   }
   @media (min-width: $lg) {
     padding: 24px 0 16px;
+    height: calc(100vh - 120px);
   }
 }
 
