fix(home): largura correta do documento

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="view === 'default'">
-    <div class="container text-white">
+    <div class="container text-white container-footer">
         <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-0 lg:flex-row-reverse">
             <h2 class="text-white futura-book-bold text-3xl mb-11 lg:hidden">Fale conosco</h2>
             <div class="contact-form w-full lg:w-5/12 mb-14 lg:mb-0">
