--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,7 +2,7 @@
 @import "~swiper/swiper";
 @import "~swiper/components/pagination/pagination";
 .swiper-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
