--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -60,8 +60,8 @@
 </ng-container>
 
 <ng-container *ngIf="view === 'page-1'">
-    <section class="container text-white">
-        <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse">
+    <section class="container text-white h-full">
+        <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse h-full">
             <h2 class="text-white futura-book-bold text-xl mb-4 lg:hidden">Fale conosco</h2>
             <div class="contact-form w-full lg:w-5/12 mb-14 lg:mb-0">
                 <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="form grid grid-cols-1 bg-white">
@@ -86,8 +86,8 @@
 </ng-container>
 
 <ng-container *ngIf="view === 'page-2'">
-    <section class="container text-white">
-        <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse">
+    <section class="container text-white h-full">
+        <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse h-full">
             <div class="flex flex-wrap justify-center w-full lg:w-7/12">
                 <div class="logo flex justify-center lg:justify-start mb-6">
                     <img src="/assets/images/logo-santo-job-white.png" class="w-48 md:w-56"
