fix(footer): corrigindo altura na tela de servicos

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -30,15 +30,15 @@
           </div>
           <div class="hidden md:flex items-center md:ml-6 w-full">
             <ul class="flex space-x-4 w-full justify-around items-center">
-              <li href="#" (click)="onClickLink(3)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl selected"
+              <li [routerLink]="['/']" (click)="onClickLink(3)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl selected"
                 [ngClass]="{'selected': activeMenu === 3}">Quem somos</li>
-              <li href="#" (click)="onClickLink(4)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl"
+              <li [routerLink]="['/']" (click)="onClickLink(4)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl"
                 [ngClass]="{'selected': activeMenu === 4}">O que
                 fazemos</li>
-              <li href="#" (click)="onClickLink(5)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl"
+              <li [routerLink]="['/']" (click)="onClickLink(5)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl"
                 [ngClass]="{'selected': activeMenu === 5}">
                 Influencers</li>
-              <li href="#" (click)="onClickLink(7)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl"
+              <li [routerLink]="['/']" (click)="onClickLink(7)" class="futura-book-bold color-disable text-base lg:text-lg xl:text-xl"
                 [ngClass]="{'selected': activeMenu === 7}">Fale
                 conosco</li>
             </ul>
@@ -51,15 +51,15 @@
 <!-- Menu Mobile -->
 <div class="md:hidden absolute top-20 bg-black w-full" [hidden]="!open" id="mobile-menu">
   <ul class="px-2 pt-2 pb-3 space-y-1">
-    <li href="#" class="text-gray-300 block px-3 py-2 rounded-md text-base font-medium" (click)="onClickLink(3)" [ngClass]="{'bg-gray-700 text-white': activeMenu === 3}">
+    <li [routerLink]="['/']" class="text-gray-300 block px-3 py-2 rounded-md text-base font-medium" (click)="onClickLink(3)" [ngClass]="{'bg-gray-700 text-white': activeMenu === 3}">
       Quem somos</li>
-    <li href="#"
+    <li [routerLink]="['/']"
       class="text-gray-300 block px-3 py-2 rounded-md text-base font-medium" (click)="onClickLink(5)" [ngClass]="{'bg-gray-700 text-white': activeMenu === 5}">O
       que fazemos</li>
-    <li href="#"
+    <li [routerLink]="['/']"
       class="text-gray-300 block px-3 py-2 rounded-md text-base font-medium" (click)="onClickLink(7)" [ngClass]="{'bg-gray-700 text-white': activeMenu === 7}">
       Influencers</li>
-    <li href="#"
+    <li [routerLink]="['/']"
       class="text-gray-300 block px-3 py-2 rounded-md text-base font-medium" (click)="onClickLink(9)" [ngClass]="{'bg-gray-700 text-white': activeMenu === 9}">
       Fale
       conosco</li>
