--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,128 +1,120 @@
 <ng-container *ngIf="view === 'default'">
-    <div class="container text-white container-footer">
-        <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-0 lg:flex-row-reverse">
-            <h2 class="text-white futura-book-bold text-3xl mb-11 lg:hidden">Fale conosco</h2>
-            <div class="contact-form w-full lg:w-5/12 mb-14 lg:mb-0">
-                <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="form grid grid-cols-1 bg-white">
-                    <h2 class="text-black futura-book-bold text-4xl ml-11 mb-6 hidden lg:block">Fale conosco</h2>
-                    <input id="nome" type="text" placeholder="Nome" formControlName="nome"
-                        class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                    <div class="grid grid-cols-2 gap-5">
-                        <input id="telefone" type="tel" placeholder="Telefone" formControlName="telefone"
-                            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                        <input id="email" type="email" placeholder="E-mail" formControlName="email"
-                            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                    </div>
-                    <input id="assunto" type="text" placeholder="Assunto" formControlName="assunto"
-                        class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                    <textarea rows="2" id="mensagem" type="text" placeholder="Mensagem" formControlName="mensagem"
-                        class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-12 lg:mb-8"></textarea>
-                    <button type="submit" class="form-button" [disabled]="!contactForm.valid">ENVIAR</button>
-                </form>
-            </div>
-            <div class="flex flex-wrap justify-center w-full lg:w-7/12">
-                <div class="logo flex justify-center lg:justify-start mb-6">
-                    <img src="/assets/images/logo-santo-job-white.png" class="w-8/12 md:w-1/3"
-                        alt="Logo Santo Job Branco">
-                </div>
-                <div class="contact-info flex justify-center flex-wrap">
-                    <div class="w-full md:w-6/12 lg:w-full">
-                        <h3
-                            class="futura-book-bold contact-title w-full lg:text-left text-3xl lg:text-3xl mb-4 lg:mb-4">
-                            Contato</h3>
-                        <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
-                                    src="/assets/images/icons/icon-phone.png" alt="icone-telefone"
-                                    class="w-8"></span><span class="ml-6 text-sm md:text-lg lg:text-base">+55 11
-                                3535.0000</span></p>
-                        <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
-                                    src="/assets/images/icons/icon-email.png" alt="icone-email" class="w-8"></span><span
-                                class="ml-6 text-sm md:text-lg lg:text-base">contato@santojobcomunicacao.com</span></p>
-                        <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
-                                    src="/assets/images/icons/icon-instagram.png" alt="icone-instagram"
-                                    class="w-8"></span><span
-                                class="ml-6 text-sm md:text-lg lg:text-base">@SantoJobComunicacao</span></p>
-                    </div>
-                    <div class="address-info w-full md:w-6/12 md:pl-4 lg:w-full lg:pl-0">
-                        <p class="contact-item flex flex-wrap mb-5"><span class="contact-icon mb-5"><img
-                                    src="/assets/images/icons/icon-location.png" alt="icone-lugar"
-                                    class="w-14"></span><span
-                                class="text-sm md:text-lg lg:text-base w-full lg:w-6/12">Avenida Paulista 171, 10º andar
-                                Bela
-                                Vista, São Paulo - SP CEP 01311-904</span></p>
-                    </div>
-                </div>
-            </div>
+  <div class="container text-white container-footer">
+    <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-0 lg:flex-row-reverse">
+      <h2 class="text-white futura-book-bold text-3xl mb-11 lg:hidden">Fale conosco</h2>
+      <div class="contact-form w-full lg:w-5/12 mb-14 lg:mb-0">
+        <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="form grid grid-cols-1 bg-white">
+          <h2 class="text-black futura-book-bold text-4xl ml-11 mb-6 hidden lg:block">Fale conosco</h2>
+          <input id="nome" type="text" placeholder="Nome" formControlName="nome"
+            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+          <div class="grid grid-cols-2 gap-5">
+            <input id="telefone" type="tel" placeholder="Telefone" formControlName="telefone"
+              class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+            <input id="email" type="email" placeholder="E-mail" formControlName="email"
+              class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+          </div>
+          <input id="assunto" type="text" placeholder="Assunto" formControlName="assunto"
+            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+          <textarea rows="2" id="mensagem" type="text" placeholder="Mensagem" formControlName="mensagem"
+            class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-12 lg:mb-8"></textarea>
+          <button type="submit" class="form-button" [disabled]="!contactForm.valid">ENVIAR</button>
+        </form>
+      </div>
+      <div class="flex flex-wrap justify-center w-full lg:w-7/12">
+        <div class="logo flex justify-center lg:justify-start mb-6">
+          <img src="/assets/images/logo-santo-job-white.png" class="w-8/12 md:w-1/3" alt="Logo Santo Job Branco">
         </div>
-        <div class="footer-text text-center futura-book-bold hidden md:block md:mt-16 lg:mt-0">© 2020 Santo Job. Todos
-            os
-            direitos reservados.</div>
+        <div class="contact-info flex justify-center flex-wrap">
+          <div class="w-full md:w-6/12 lg:w-full">
+            <h3 class="futura-book-bold contact-title w-full lg:text-left text-3xl lg:text-3xl mb-4 lg:mb-4">
+              Contato</h3>
+            <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
+                  src="/assets/images/icons/icon-phone.png" alt="icone-telefone" class="w-8"></span><span
+                class="ml-6 text-sm md:text-lg lg:text-base">+55 11
+                3535.0000</span></p>
+            <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
+                  src="/assets/images/icons/icon-email.png" alt="icone-email" class="w-8"></span><span
+                class="ml-6 text-sm md:text-lg lg:text-base">contato@santojobcomunicacao.com</span></p>
+            <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
+                  src="/assets/images/icons/icon-instagram.png" alt="icone-instagram" class="w-8"></span><span
+                class="ml-6 text-sm md:text-lg lg:text-base">@SantoJobComunicacao</span></p>
+          </div>
+          <div class="address-info w-full md:w-6/12 md:pl-4 lg:w-full lg:pl-0">
+            <p class="contact-item flex flex-wrap mb-5"><span class="contact-icon mb-5"><img
+                  src="/assets/images/icons/icon-location.png" alt="icone-lugar" class="w-14"></span><span
+                class="text-sm md:text-lg lg:text-base w-full lg:w-6/12">Avenida Paulista 171, 10º andar
+                Bela
+                Vista, São Paulo - SP CEP 01311-904</span></p>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="footer-text text-center futura-book-bold hidden md:block md:mt-16 lg:mt-0">© 2020 Santo Job. Todos
+      os
+      direitos reservados.</div>
+  </div>
 </ng-container>
 
 <ng-container *ngIf="view === 'page-1'">
-    <section class="container text-white h-full">
-        <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse h-full">
-            <h2 class="text-white futura-book-bold text-xl mb-4 lg:hidden">Fale conosco</h2>
-            <div class="contact-form w-full lg:w-5/12 mb-14 lg:mb-0">
-                <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="form grid grid-cols-1 bg-white">
-                    <h2 class="text-black futura-book-bold text-4xl ml-11 mb-6 hidden lg:block">Fale conosco</h2>
-                    <input id="nome" type="text" placeholder="Nome" formControlName="nome"
-                        class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                    <div class="grid grid-cols-2 gap-5">
-                        <input id="telefone" type="tel" placeholder="Telefone" formControlName="telefone"
-                            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                        <input id="email" type="email" placeholder="E-mail" formControlName="email"
-                            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                    </div>
-                    <input id="assunto" type="text" placeholder="Assunto" formControlName="assunto"
-                        class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
-                    <textarea rows="5" id="mensagem" type="text" placeholder="Mensagem" formControlName="mensagem"
-                        class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-8 lg:mb-24"></textarea>
-                    <button type="submit" class="form-button" [disabled]="!contactForm.valid">ENVIAR</button>
-                </form>
-            </div>
-        </div>
-    </section>
+  <section class="container text-white h-full">
+    <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse h-full">
+      <h2 class="text-white futura-book-bold text-xl mb-4 lg:hidden">Fale conosco</h2>
+      <div class="contact-form w-full lg:w-5/12 mb-14 lg:mb-0">
+        <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="form grid grid-cols-1 bg-white">
+          <h2 class="text-black futura-book-bold text-4xl ml-11 mb-6 hidden lg:block">Fale conosco</h2>
+          <input id="nome" type="text" placeholder="Nome" formControlName="nome"
+            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+          <div class="grid grid-cols-2 gap-5">
+            <input id="telefone" type="tel" placeholder="Telefone" formControlName="telefone"
+              class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+            <input id="email" type="email" placeholder="E-mail" formControlName="email"
+              class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+          </div>
+          <input id="assunto" type="text" placeholder="Assunto" formControlName="assunto"
+            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+          <textarea rows="5" id="mensagem" type="text" placeholder="Mensagem" formControlName="mensagem"
+            class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-8 lg:mb-24"></textarea>
+          <button type="submit" class="form-button" [disabled]="!contactForm.valid">ENVIAR</button>
+        </form>
+      </div>
+    </div>
+  </section>
 </ng-container>
 
 <ng-container *ngIf="view === 'page-2'">
-    <section class="container text-white h-full">
-        <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse h-full">
-            <div class="flex flex-wrap justify-center w-full lg:w-7/12">
-                <div class="logo flex justify-center lg:justify-start mb-6">
-                    <img src="/assets/images/logo-santo-job-white.png" class="w-48 md:w-56"
-                        alt="Logo Santo Job Branco">
-                </div>
-                <div class="contact-info flex justify-center flex-wrap">
-                    <div class="w-full md:w-6/12 lg:w-full">
-                        <h3
-                            class="futura-book-bold contact-title w-full lg:text-left text-xl lg:text-5xl mb-4 lg:mb-8">
-                            Contato</h3>
-                        <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
-                                    src="/assets/images/icons/icon-phone.png" alt="icone-telefone"
-                                    class="w-8"></span><span class="ml-6 text-sm md:text-lg lg:text-xl">+55 11
-                                3535.0000</span></p>
-                        <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
-                                    src="/assets/images/icons/icon-email.png" alt="icone-email" class="w-8"></span><span
-                                class="ml-6 text-sm md:text-lg lg:text-xl">contato@santojobcomunicacao.com</span></p>
-                        <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
-                                    src="/assets/images/icons/icon-instagram.png" alt="icone-instagram"
-                                    class="w-8"></span><span
-                                class="ml-6 text-sm md:text-lg lg:text-xl">@SantoJobComunicacao</span></p>
-                    </div>
-                    <div class="address-info w-full md:w-6/12 md:pl-4 lg:w-full lg:pl-0">
-                        <p class="contact-item flex flex-wrap mb-5 w-full"><span class="contact-icon w-full mb-5"><img
-                                    src="/assets/images/icons/icon-location.png" alt="icone-lugar"
-                                    class="w-14"></span><span
-                                class="text-sm md:text-lg lg:text-xl w-full lg:w-6/12">Avenida Paulista 171, 10º andar
-                                Bela
-                                Vista, São Paulo - SP CEP 01311-904</span></p>
-                    </div>
-                </div>
-            </div>
+  <section class="container text-white h-full">
+    <div class="flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:mb-24 lg:flex-row-reverse h-full">
+      <div class="flex flex-wrap justify-center w-full lg:w-7/12">
+        <div class="logo flex justify-center lg:justify-start mb-6">
+          <img src="/assets/images/logo-santo-job-white.png" class="w-48 md:w-56" alt="Logo Santo Job Branco">
         </div>
-        <div class="footer-text text-center futura-book-bold hidden md:block md:mt-16 lg:mt-24">© 2020 Santo Job. Todos
-            os
-            direitos reservados.</div>
-    </section>
+        <div class="contact-info flex justify-center flex-wrap">
+          <div class="w-full md:w-6/12 lg:w-full">
+            <h3 class="futura-book-bold contact-title w-full lg:text-left text-xl lg:text-5xl mb-4 lg:mb-8">
+              Contato</h3>
+            <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
+                  src="/assets/images/icons/icon-phone.png" alt="icone-telefone" class="w-8"></span><span
+                class="ml-6 text-sm md:text-lg lg:text-xl">+55 11
+                3535.0000</span></p>
+            <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
+                  src="/assets/images/icons/icon-email.png" alt="icone-email" class="w-8"></span><span
+                class="ml-6 text-sm md:text-lg lg:text-xl">contato@santojobcomunicacao.com</span></p>
+            <p class="contact-item flex mb-5 w-full"><span class="contact-icon"><img
+                  src="/assets/images/icons/icon-instagram.png" alt="icone-instagram" class="w-8"></span><span
+                class="ml-6 text-sm md:text-lg lg:text-xl">@SantoJobComunicacao</span></p>
+          </div>
+          <div class="address-info w-full md:w-6/12 md:pl-4 lg:w-full lg:pl-0">
+            <p class="contact-item flex flex-wrap mb-5 w-full"><span class="contact-icon w-full mb-5"><img
+                  src="/assets/images/icons/icon-location.png" alt="icone-lugar" class="w-14"></span><span
+                class="text-sm md:text-lg lg:text-xl w-full lg:w-6/12">Avenida Paulista 171, 10º andar
+                Bela
+                Vista, São Paulo - SP CEP 01311-904</span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-text text-center futura-book-bold hidden md:block md:mt-16 lg:mt-24">© 2020 Santo Job. Todos
+      os
+      direitos reservados.</div>
+  </section>
 </ng-container>
