feat(influencers): configurando botao de pedir orcamento

--- a/src/app/pages/home/components/influencers/influencers.component.html
+++ b/src/app/pages/home/components/influencers/influencers.component.html
@@ -23,5 +23,5 @@
     <p class="influencers-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
         euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
         exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-    <button class="influencers-button">Solicitar orçamento</button>
+    <button class="influencers-button" (click)="onClickButton()">Solicitar orçamento</button>
 </div>
