--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -2,24 +2,34 @@
 <main>
   <div class="container-services h-full">
     <div class="services-header h-1/5">
-      <div class="container">
-        <img src="" alt="">
-        <h1>{{slug}}</h1>
-        <button class="back-btn">voltar</button>
+      <div class="container h-full">
+        <div class="flex h-full justify-between items-center">
+          <div class="flex h-full items-center">
+            <img src="/assets/images/icons/logo-oi.png" alt="Logo da Oi" class="h-full py-4">
+            <div class="services-header-title flex flex-col text-left">
+              <h1 class="futura-book-bold text-3xl">{{serviceItem?.name}}</h1>
+              <h2 class="futura-book-bt text-xl">Exagero de Giga Tasty por Tirullipa em suas redes sociais</h2>
+            </div>
+          </div>
+          <a class="back-btn h-10" routerLink="/" fragment="o-que-fazemos">voltar</a>
+        </div>
       </div>
     </div>
     <div class="services-content h-4/5">
-      <div class="container">
-        <p class="services-content-text futura-book-bold w-full sm:w-1/2">Lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut
-          wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-          commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
-          vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
-          praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons
-          ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-          volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-          aliquip ex ea commodo conse</p>
-        <button class="services-content-button" (click)="onClickButton()">Solicitar orçamento</button>
+      <div class="container h-full">
+        <div class="w-3/5 h-full flex flex-col justify-evenly">
+          <p class="services-content-text futura-book-bold w-full">Lorem ipsum dolor sit amet, consectetuer
+            adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut
+            wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
+            commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
+            vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
+            praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
+            cons
+            ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
+            volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+            aliquip ex ea commodo conse</p>
+          <button class="services-content-button w-1/2" (click)="goToFooter()">Solicitar orçamento</button>
+        </div>
       </div>
     </div>
   </div>
