--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,7 +3,7 @@
 :host {
   background-color: $primaryBlueColor;
   padding: 1rem 0 1rem;
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 80px);
 
   @media (min-width: $md) {
