--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -1,24 +1,24 @@
 <header app-header></header>
 <main>
-  <div class="container-services h-full">
+  <div class="container-services lg:h-full">
     <div class="services-header h-1/5">
-      <div class="container h-full">
-        <div class="flex h-full justify-between items-center">
-          <div class="flex h-full items-center">
-            <img src="/assets/images/icons/logo-oi.png" alt="Logo da Oi" class="h-full py-4">
-            <div class="services-header-title flex flex-col text-left">
-              <h1 class="futura-book-bold text-3xl">{{serviceItem?.name}}</h1>
-              <h2 class="futura-book-bt text-xl">Exagero de Giga Tasty por Tirullipa em suas redes sociais</h2>
+      <div class="container px-4 py-8 lg:p-0 lg:h-full">
+        <div class="flex lg:px-8 lg:mx-auto flex-col-reverse lg:flex-row lg:h-full justify-between items-center gap-6 lg:gap-0">
+          <div class="flex flex-col lg:flex-row lg:h-full items-center">
+            <img src="/assets/images/icons/logo-oi.png" alt="Logo da Oi" class="w-3/4 lg:w-auto lg:h-full py-4">
+            <div class="services-header-title flex flex-col text-center lg:text-left">
+              <h1 class="futura-book-bold text-xl lg:text-3xl">{{serviceItem?.name}}</h1>
+              <h2 class="futura-book-bt text-lg lg:text-xl">Exagero de Giga Tasty por Tirullipa em suas redes sociais</h2>
             </div>
           </div>
-          <a class="back-btn h-10" routerLink="/" fragment="o-que-fazemos">voltar</a>
+          <a class="back-btn h-6 lg:h-10" routerLink="/" fragment="o-que-fazemos">voltar</a>
         </div>
       </div>
     </div>
     <div class="services-content h-4/5">
-      <div class="container h-full">
-        <div class="w-3/5 h-full flex flex-col justify-evenly">
-          <p class="services-content-text futura-book-bold w-full">Lorem ipsum dolor sit amet, consectetuer
+      <div class="container lg:h-full">
+        <div class="w-full lg:w-3/5 lg:px-8 lg:h-full flex flex-col justify-evenly gap-8">
+          <p class="services-content-text futura-book-bold w-full text-sm lg:text-base">Lorem ipsum dolor sit amet, consectetuer
             adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut
             wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
             commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
@@ -28,7 +28,7 @@
             ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
             volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
             aliquip ex ea commodo conse</p>
-          <button class="services-content-button w-1/2" (click)="goToFooter()">Solicitar orçamento</button>
+          <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2" (click)="goToFooter()">Solicitar orçamento</button>
         </div>
       </div>
     </div>
