--- a/src/app/pages/services/services.component.scss
+++ b/src/app/pages/services/services.component.scss
@@ -19,6 +19,7 @@ footer{
   flex-direction: column;
   .services-header {
     display: flex;
+    height: 25%;
     .back-btn {
       background: #0091DA 0% 0% no-repeat padding-box;
       border-radius: 24px;
@@ -38,6 +39,7 @@ footer{
     padding: 2rem 0;
     background: transparent radial-gradient(closest-side at 47% 60%, #80CFD8 0%, #67B9CD 100%) 0% 0% no-repeat padding-box;
     position: relative;
+    height: 75%;
     .services-content-text {
       color: white;
       margin-left: 0;
@@ -49,6 +51,14 @@ footer{
       color: white;
       padding: 0.5rem 0;
       font-family: 'Futura Book';
+    }
+  }
+
+  .card-section {
+    margin-top: -5rem;
+    width: 280px;
+    @media (min-width: $lg) {
+      width: 300px;
     }
   }
 
