feat(email): agregando notificacoes no envio de email

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
+<div app-notifications [type]="(notificationParams$ | async)?.type || ''" [message]="(notificationParams$ | async)?.message || ''" class="notification" *ngIf="showNotification$ | async"></div>
 <router-outlet></router-outlet>
