--- a/src/app/pages/home/components/who-are-we/who-are-we.component.scss
+++ b/src/app/pages/home/components/who-are-we/who-are-we.component.scss
@@ -22,6 +22,10 @@
   gap: 2rem;
   height: calc(100vh - 80px);
 
+  &.page-1 {
+    justify-content: space-around;
+  }
+
   @media (min-width: $lg) {
     height: calc(100vh - 120px);
   }
@@ -222,6 +226,19 @@
 
 
       }
+    }
+  }
+
+  .see-more-btn {
+    background: #0091DA 0% 0% no-repeat padding-box;
+    border-radius: 16px;
+    color: white;
+    font-family: "Futura Book";
+    padding: 0.35rem 2rem;
+    font-size: 14px;
+    align-self: center;
+    @media (min-width: $md) {
+      display: none;
     }
   }
 
