--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -11,7 +11,8 @@
               <h2 class="futura-book-bt text-lg lg:text-xl">Exagero de Giga Tasty por Tirullipa em suas redes sociais</h2>
             </div>
           </div>
-          <a class="back-btn h-6 lg:h-10" routerLink="/" fragment="o-que-fazemos">voltar</a>
+          <a class="back-btn h-6 lg:h-10 hidden md:block" routerLink="/" fragment="o-que-fazemos">voltar</a>
+          <a class="block md:hidden w-full" routerLink="/" fragment="o-que-fazemos"><fa-icon [icon]="icons['arrowLeft']" alt="botão voltar" class="back-icon"></fa-icon></a>
         </div>
       </div>
     </div>
