--- a/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.html
+++ b/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.html
@@ -7,7 +7,6 @@
                     *ngFor="let service of servicesList">
                     <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
                         <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
-                        <!-- <fa-icon [icon]="icons['faGlasses']" alt="icone de publicidade" class="services-item-image"></fa-icon> -->
                         <span class='services-item-text'>{{service.name}}</span>
                     </a>
                 </li>
@@ -17,7 +16,7 @@
 </ng-container>
 
 <ng-container *ngIf="view === 'page-1'">
-    <div class="container container-what-do-we-do">
+    <div class="container container-what-do-we-do page-1">
         <h2 class="main-title">O que fazemos?</h2>
         <div class="main-content-section">
             <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
@@ -25,12 +24,12 @@
                     *ngFor="let service of servicesList | slice:0:6">
                     <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
                         <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
-                        <!-- <fa-icon [icon]="icons['faGlasses']" alt="icone de publicidade" class="services-item-image"></fa-icon> -->
                         <span class='services-item-text'>{{service.name}}</span>
                     </a>
                 </li>
             </ul>
         </div>
+        <button class="see-more-btn" (click)="goToPage(carouselItemMenu[0].mobile_position + 1)">ver mais</button>
     </div>
 </ng-container>
 
@@ -43,7 +42,6 @@
                     *ngFor="let service of servicesList | slice:6:12">
                     <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
                         <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
-                        <!-- <fa-icon [icon]="icons['faGlasses']" alt="icone de publicidade" class="services-item-image"></fa-icon> -->
                         <span class='services-item-text'>{{service.name}}</span>
                     </a>
                 </li>
