--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
   </ng-container>
   <ng-container *ngIf="isMobile">
     <ng-template swiperSlide>
-      <section app-who-are-we view='page-1'></section>
+      <section app-who-are-we view='page-1' (onClickSeeMore)="onSelectedSlide($event)"></section>
     </ng-template>
     <ng-template swiperSlide>
       <section app-who-are-we view='page-2'></section>
@@ -31,7 +31,7 @@
   </ng-container>
   <ng-container *ngIf="isMobile">
     <ng-template swiperSlide>
-      <section app-what-do-we-do view='page-1'></section>
+      <section app-what-do-we-do view='page-1' (onClickSeeMore)="onSelectedSlide($event)"></section>
     </ng-template>
     <ng-template swiperSlide>
       <section app-what-do-we-do view='page-2'></section>
