WIP(sponsors): comecando a integrar o modulo de sponsor e curiosidade

--- a/src/app/pages/home/components/influencers/influencers.component.html
+++ b/src/app/pages/home/components/influencers/influencers.component.html
@@ -2,22 +2,22 @@
     <h2 class="main-title">Influencers</h2>
     <ul class="influencers-list">
         <li class="influencers-item">
-            <a [routerLink]="['/']" routerLinkActive="router-link-active" class="influencers-item-link">
+            <div class="influencers-item-link">
                 <img src="/assets/images/icons/old-influencer.png" alt="icone de influencers"
                     class="influencers-item-image">
-            </a>
+            </div>
         </li>
         <li class="influencers-item">
-            <a [routerLink]="['/']" routerLinkActive="router-link-active" class="influencers-item-link">
+            <div class="influencers-item-link">
                 <img src="/assets/images/icons/woman-influencer.png" alt="icone de influencers"
                     class="influencers-item-image">
-            </a>
+            </div>
         </li>
         <li class="influencers-item">
-            <a [routerLink]="['/']" routerLinkActive="router-link-active" class="influencers-item-link">
+            <div class="influencers-item-link">
                 <img src="/assets/images/icons/boy-influencer.png" alt="icone de influencers"
                     class="influencers-item-image">
-            </a>
+            </div>
         </li>
     </ul>
     <p class="influencers-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
