--- a/src/app/pages/home/components/curiosity/curiosity.component.scss
+++ b/src/app/pages/home/components/curiosity/curiosity.component.scss
@@ -21,7 +21,7 @@
 
   .bg {
     width: 100%;
-    background: url(/assets/images/down-cloud.png) no-repeat center;
+    background: url(/assets/images/down-cloud.png) no-repeat bottom;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -29,7 +29,7 @@
 
     @media (min-width: $lg) {
       height: calc(100vh - 120px);
-      justify-content: flex-end;
+      justify-content: space-between;
     }
 
     .title-img {
@@ -44,14 +44,13 @@
       display: flex;
       flex-direction: column;
       position: relative;
-      gap: 0.5rem;
+      gap: 1rem;
       text-align: center;
       justify-content: space-around;
       margin-top: 2rem;
 
       @media (min-width: $lg) {
-        width: 50%;
-        margin-top: 4rem;
+        margin-top: 5rem;
         text-align: left;
       }
 
@@ -65,7 +64,7 @@
         }
 
         @media (min-width: $lg) {
-          font-size: 2rem;
+          font-size: 1.5rem;
           width: 50%;
         }
 
@@ -161,9 +160,9 @@
         width: 100px;
 
         @media (min-width: $xl) {
-          top: 30%;
-          left: 20%;
-          width: 230px;
+          top: 20%;
+          left: 15%;
+          width: 350px;
         }
       }
     }
@@ -177,7 +176,7 @@
       }
 
       @media (min-width: $lg) {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
       }
     }
   }
