--- a/src/app/pages/home/components/sponsors/sponsors.component.scss
+++ b/src/app/pages/home/components/sponsors/sponsors.component.scss
@@ -1,12 +1,22 @@
 @import "/src/app/shared/styles/variables";
 
+:host {
+  background-color: white;
+}
+
 .sponsors-container {
   display: flex;
   flex-direction: column;
   gap: 2rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  
+
+  @media (min-width: $lg) {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    gap: 1rem;
+  }
+
   .sponsors-title {
     font-size: 1.125rem;
     font-family: 'Futura Book';
@@ -14,7 +24,7 @@
     opacity: 0.3;
 
     @media (min-width: $lg) {
-      font-size: 1.75rem;
+      font-size: 1.25rem;
     }
 
   }
@@ -29,7 +39,7 @@
       width: 25%;
 
       @media (min-width: $md) {
-        width: 10%;
+        width: 80px;
       }
     }
   }
